Update nice file
Voilà, j'ai rempli les descriptifs et le lieu et horaire ;)

--- a/hackadons2015/nice-epitech.html
+++ b/hackadons2015/nice-epitech.html
@@ -17,14 +17,17 @@ layout: default
 	</header>
 	
 	<span class="image featured"><img src="{{ site.baseurl }}/assets/images/hackadon_oslantis.png" alt="" /></span>
+	<h3>Qu'est-ce qu'OSlantis</h3>
 	
-	<h3>Qu'est-ce que l'Epitech ?</h3>
+	<p>OSlantis est une plateforme une plateforme de crowdfunding inversé. Au lieu de pré-vendre un projet à une communauté, c'est les communautés qui peuvent lancer un problème à résoudre. Un Prix est rassemblé en crowdfunding, puis une campagne pour produire des idées est lancée pour faire émerger des solutions. Une fois qu'une solution est déclarée gagnante et partagée en Open Source, le Prix est distribué parmi les contributeurs qui l'ont crée.</p>
 	
-	<p>...</p>
+	<h3>Qu'est-ce qu l'Epitech ?</h3>
+	
+	<p>Epitech est une école d'informatique créée en 1999 qui forme en 5 ans après-bac des experts du secteur. Elle permet de transformer une passion en expertise via une pédagogie résolument innovante, organisée par projets. Elle est présente dans 12 villes de France et bientôt à Beijing (Chine).</p>
 
 	<h3>Où et quand a lieu le Hackadon ?</h3>
 
-	<p>...</p>
+	<p>Le Hackadon se passera à Epitech, 13, rue St François de Paule, 06300 Nice, à 18h30 le 11 Décembre</p>
 
 	<h3>Comment proposer un projet ?</h3>
 
