--- a/hackadons2015/nice-epitech.html
+++ b/hackadons2015/nice-epitech.html
@@ -12,19 +12,23 @@ layout: default
       
       <article>
 	<header>
-	  <h2>Le Hackadon de l'association des étudiants d'Epitech à Nice</h2>
+	  <h2>Le Hackadon de l'association des étudiants d'Epitech à Nice et d'OSlantis</h2>
 	  <p>Rendez-vous le 11 décembre 2015 !</p>
 	</header>
 	
 	<span class="image featured"><img src="{{ site.baseurl }}/assets/images/hackadon_oslantis.png" alt="" /></span>
 	
-	<h3>Qu'est-ce que l'Epitech ?</h3>
+	<h3>Qu'est-ce qu'OSlantis</h3>
 	
-	<p>...</p>
+	<p>OSlantis est une plateforme de crowdfunding inversé. Au lieu de pré-vendre un projet à une communauté, vous pouvez faire appel à une communauté pour résoudre un problème. On rassemble un Prix en crowdfunding, puis une campagne pour produire des idées est lancée pour faire émerger des solutions. Une fois qu'une solution est déclarée gagnante et partagée en Open Source, le Prix est distribué parmi les contributeurs qui l'ont crée.</p>
+	
+	<h3>Qu'est-ce qu'Epitech ?</h3>
+	
+	<p>Epitech est une école d'informatique créée en 1999 qui forme en 5 ans après-bac des experts du secteur. Elle permet de transformer une passion en expertise via une pédagogie résolument innovante, organisée par projets. Elle est présente dans 12 villes de France et bientôt à Beijing (Chine).</p>
 
 	<h3>Où et quand a lieu le Hackadon ?</h3>
 
-	<p>...</p>
+	<p>Ce sera à Epitech, au 13 Rue Saint-François de Paule, 06300 Nice, le 11 Décembre à partir de 18h30</p>
 
 	<h3>Comment proposer un projet ?</h3>
 
